--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&family=Cairo:wght@600&family=Macondo&display=swap');
 .header {
   display: flex;
+  justify-content: start;
   width: 100%;
   background-color: rgba(6, 142, 160, 0.39);
   box-sizing: border-box;
