--- a/src/components/Prompt.css
+++ b/src/components/Prompt.css
@@ -34,6 +34,7 @@
   font-size: 1.5em;
   margin: 20px;  
   font-family: 'Abel', sans-serif;
+  font-style: italic;
 }
 .prompt-btn {
   color: #fff;
