--- a/src/components/Response.css
+++ b/src/components/Response.css
@@ -13,6 +13,12 @@ li {
   background-color: rgba(255, 255, 255, 0.397);  
   margin: 10px;
   overflow: hidden;
+  transition-duration: .5s;
+}
+
+.response:hover {
+  transform: scale(1.02);
+  transition-duration: .5s;
 }
 .response-title {
   font-family: 'Macondo', cursive;
@@ -23,7 +29,7 @@ span {
 }
 .response-text {
 text-align: start;
-font-size: 1.2em;
+font-size: 1.4em;
 padding: 0px 10px;
 font-family: 'Abel', sans-serif;
 }
